--- a/style.css
+++ b/style.css
@@ -41,16 +41,25 @@ body {
 .social-field {
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 50px;
+    gap: 10px;
     margin-bottom: 40px;
 }
 
-.social-field i {
-    width: 50px;
-    height: 50px;
-    border: 1px solid black;
+.social-icon {
+    width: 40px;
+    height: 40px;
+    border: 1px solid rgb(128, 128, 128);
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: black
+}
+
+.social-icon:hover {
+    background-color: rgb(93, 62, 126);
+    color: rgb(230, 164, 109);
 }
 
 .button-field button {
